# cuda-quantum

./: .clang-format  .coderabbit.yaml  .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .style.yapf  Building.md  CITATION.cff  CMakeLists.txt  CODEOWNERS  Code_of_Conduct.md  Contributing.md  Contributor_License_Agreement.md  CppAPICodingStyle.md  Data_Center_Install.rst  Dev_Setup.md  Developing.md  Dockerfile  GitHubJiraTest1.txt  LICENSE  LLVM_MIGRATION_CHANGELOG.md  NOTICE  Overview.md  README.md  SECURITY.md  build_and_run_cuda_quantum.sh  cla.json  create_redirects.sh  cuda-keyring_1.1-1_all.deb  data_center_install.html  dictionary.dic  dynamics.html  dynamics.py  examples  flake.nix  genindex.html  (+37 more)
cmake/Modules/: CMakeCUDAQCompiler.cmake.in  CMakeCUDAQInformation.cmake  CMakeDetermineCUDAQCompiler.cmake  CMakeLists.txt  CMakeTestCUDAQCompiler.cmake  CUDAQCommonConfig.cmake  CUDAQConfig.cmake  CUDAQEmDefaultConfig.cmake  CUDAQEmQirConfig.cmake  CUDAQEnsmallenConfig.cmake  CUDAQLoggerConfig.cmake  CUDAQNloptConfig.cmake  CUDAQOperatorConfig.cmake  CUDAQPlatformDefaultConfig.cmake  CUDAQPythonInteropConfig.cmake  CUDAQRPath.cmake  CUDAQSpinConfig.cmake  FindMETIS.cmake  NVQIRConfig.cmake  NVQIRConfig.cmake.in  NVQIRTargetConfigGen.cmake
cmake/modules/: AddCUDAQ.cmake  BuildHelpers.cmake  BundleMLIRDevel.cmake  CMakeCUDAQCompiler.cmake.in  CMakeCUDAQInformation.cmake  CMakeDetermineCUDAQCompiler.cmake  CMakeLists.txt  CMakeTestCUDAQCompiler.cmake  CUDAQCommonConfig.cmake  CUDAQConfig.cmake  CUDAQEmDefaultConfig.cmake  CUDAQEnsmallenConfig.cmake  CUDAQGtestDiscovery.cmake  CUDAQMlirRuntimeConfig.cmake  CUDAQNloptConfig.cmake  CUDAQOperatorConfig.cmake  CUDAQPlatformDefaultConfig.cmake  FindMinizip.cmake  FindcuDensityMat.cmake  FindcuStateVec.cmake  FindcuTensor.cmake  FindcuTensorNet.cmake  NVQIRConfig.cmake.in  NVQIRTargetConfigGen.cmake  ProcessMLIRMarkdown.cmake  Sanitizers.cmake
cudaq/: CMakeLists.txt
cudaq/include/: CMakeLists.txt  nvqpp_config.h.in
cudaq/lib/: CMakeLists.txt
cudaq/test/: CMakeLists.txt  README.txt  lit.cfg.py  lit.site.cfg.py.in
cudaq/tools/: CMakeLists.txt
cudaq/unittests/: CMakeLists.txt  FactoryMergeModuleTest.cpp  QuakeSynthTester.cpp
cudaq/utils/: CMakeLists.txt
examples/roce/: CMakeLists.txt  roce_channel.cpp  roce_channel_client.cpp  roce_client_common.h  roce_daemon.cpp  roce_daemon_client.cpp  udp_control_server.cpp  udp_control_server.h  utils.h
experimental/pulse/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  pyrightconfig.json
include/: CMakeLists.txt  nvqpp_config.h.in
include/cudaq/: CMakeLists.txt  Todo.h  constants.h  nvqlink.h  qclink.h
latest/: CMakeLists.txt  README.md  data_center_install.html  genindex.html  genindex.md  index.html  index.md  install.html  llms.txt  notebook_validation.py  objects.inv  openapi.html  py-modindex.html  py-modindex.md  releases.html  releases.md  search.html  search.md  searchindex.js
latest/_sources/: index.rst.txt  releases.rst.txt
latest/_tags/: tagsindex.html  tagsindex.md
latest/api/: api.html  api.md  default_ops.html  default_ops.md
latest/specification/: cudaq.html  cudaq.md  index.html  index.md  qtx-dialect.html  quake-dialect.html  quake-dialect.md
latest/sphinx/: releases.rst
latest/using/: advanced.html  applications.html  applications.md  cpp.html  cudaq.html  dynamics.html  dynamics.md  examples.html  hardware.html  python.html  quick_start.html  quick_start.md  realtime.html  realtime.md  sample_to_run_migration.html  sample_to_run_migration.md  simulators.html  tutorials.html
lib/: CMakeLists.txt  compiler.cpp  nvqlink.cpp  qclink.cpp
lib/Frontend/: CMakeLists.txt
lib/Optimizer/: CMakeLists.txt
lib/Support/: CMakeLists.txt  GraphPartitioner.cpp  Plugin.cpp
lib/Synthesis/: CMakeLists.txt
lib/Verifier/: CMakeLists.txt  NVQIRCalls.cpp  QIRLLVMIRDialect.cpp  QIRSpec.cpp
lib/compilers/: CMakeLists.txt  cudaq.cpp  cudaq_toolchain.cpp
lib/daemon/: CMakeLists.txt  config.cpp  daemon.cpp
lib/devices/: CMakeLists.txt  cpu_shmem_device.cpp  cuda_device.cu
lib/network/: CMakeLists.txt
lib/plugins/: DeviceCallShmem.cpp
lib/qcs/: control_server.cpp  qcs_device.cpp
lib/utils/: CMakeLists.txt  logger.cpp  logger.h
pr-714/: CMakeLists.txt  genindex.html  index.html  install.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
pr-714/_static/: pygments.css
pr-714/api/: api.html
pr-714/specification/: cudaq.html  index.html  quake-dialect.html
pr-714/using/: advanced.html  cpp.html  cudaq.html  examples.html  hardware.html  python.html  simulators.html  tutorials.html
python/: .gitignore  CMakeLists.txt  CUDAQuantumExtension.cpp  MANIFEST.in  README-cu11.md  README-cu12.md  README.md  README.md.in  _cudaq.cpp  copy_python_files.cmake  cudaq.py  metadata.cmake  setup.py  temp_remove_pyproject.toml
python/cudaq/: __init__.py  _cudaq.cpp  _packages.py  _query_gpu.py  _query_system.py  kernel_types.py  plugins.py  qpu.py
python/domains/: __init__.py  chemistry.py
python/experimental/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp  PythonMLIRHooks.cpp  SiteInitialize.cpp
python/metapackages/: MANIFEST.in  README.md  hatch_build.py  pyproject.toml  setup.py  test_validate_sdist_metadata.py  validate_sdist_metadata.py
python/sdist/: README.md  pyproject.toml  setup.py
python/src/: CMakeLists.txt  _cudaq.cpp
python/tests/: CMakeLists.txt  conftest.py  dm_bug.py  mklq_test_utils.py  test.py  test_helpers.py  (+1 more)
realtime/: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md
runtime/: CMakeLists.txt  cudaq.h  host_config.h
targettests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  stim_pcm_test.cpp
tools/: CMakeLists.txt
unittests/: CMakeLists.txt  CUDAQTestUtils.h  main.cpp  test_config.h.in  test_cpu_shmem_device.cpp  test_cuda_device.cpp  test_cudaq_compiler.cpp  test_daemon.cpp  test_nv_rdma_device.cu  test_nvqlink.cpp  test_qclink.cpp  test_streams.cpp
(+298874 files in other folders)
